--- a/wdd130/wwr/styles/style.css
+++ b/wdd130/wwr/styles/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Akshar:wght@500&family=Mulish:wght@200&display=swap');
+:root{
+    --heading-font: "Akshar";
+    --paragraph-font: "Mulish";
+}
 .content{
     max-width: 1600px;
     margin: 0 auto;
@@ -6,12 +11,35 @@ nav a{
     text-align: center;
     color: black;
     text-decoration: none;
+    padding: 35px;
+}
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-img{
+    width: 100%;
+}
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 #hero-msg h1{
     text-align: center;
 }
 #hero-msg h4{
-    color: black;
+    color: white;
     text-align: center;
 }
 .button-box{
@@ -20,31 +48,44 @@ nav a{
 main section{
     text-align: center;
 }
-.background{
-    height: 725px;
-}
 body{
     background-color: #90E0EF;
+    font-family: var(--paragraph-font);
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+.logo_link{
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+h2{
+    margin: 0;
 }
 header{
     background-color: #0096C7;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 .home-title{
-    color: black;
+    color: rgb(255, 255, 255);
+    font-family:var(--heading-font);
+    font-size: 2em;
+    margin-top: 10px;
 }
 nav a:hover{
     color: black;
     background-color: #0077B6;
 }
-.book{
-    color: black;
-    background-color: #90E0EF;
-    text-decoration: none;
-}
-.join{
-    text-decoration: none;
+.book, .join{
     color: black;
     background-color: #0077B6;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover{
     color: black;
@@ -52,22 +93,39 @@ nav a:hover{
 }
 .join:hover{
     color: black;
-    background-color: #90E0EF;
+    background-color: #023E8A;
 }
 .msg h2{
     color: black;
+    font-family: var(--heading-font);
 }
 .msg p{
     color: black;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 #background{
-    background-color: #023E8A;
+    background-color: #355d92;
+    height: 600px;
+    grid-column: 1/11;
+    grid-row: 4/9;
+    padding:5em ;
 }
 .msg{
     background-color: #0096C7;
+    line-height: 1.5em;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #0077B6;
 }
 footer{
     background-color: #0077B6;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer h3{
     text-decoration: underline;
@@ -86,7 +144,93 @@ footer a:hover{
 }
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 #hero-img{
     width: 100%;
+}
+footer .social{
+    padding-top: 15px;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 50px auto;
+}
+.card-img{
+    border: 10px solid #0096C7;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #0077B6;
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+}
+main section img{
+    box-sizing: border-box;
+}
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.card-img{
+    width: 100%;
+}
+
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #0077B6;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
